# task-app-backend

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20230126032112_task-api.sql
postgresql/init/: init.sql
server/: .env  dockerfile  req.http
server/src/: main.rs
server/src/controllers/: task.rs
src/: errors.rs  main.rs
src/models/: task.rs
