[package]
name = "task-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.4"
tower-http = { version = "0.3.0", features = ["cors", "trace"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
anyhow = "1.0.68"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
dotenv = "0.15.0"
